burt.css
body {
    font-family: "Avenir Next";
    color: #002A45;
    min-width: 800px;
}

ul {
  list-style: none;
}

a {
  color: #002A45;
  text-decoration: underline;
}

.pull-left {
  float: left;
}

.pull-right {
  float:right;
}

.section {
  margin-bottom: 50px;
}

.header {
  text-align: center;
}

.header .h1 {
  text-transform: uppercase;
  color: #002A45;
  margin-bottom: 0;
  font-size: 34px;
  font-weight: 400;
}

.header .h3 {
  margin-top: 0;
  color: #8FADBF;
  font-size: 18px;
  font-weight:400;
}

.header .logo {
  margin-top: -8px;
}

.sub-header {
  max-width: 524px;
  margin:0 auto 100px auto;

}

.sub-header p {
  font-size: 24px;
  line-height: 1.5;
  margin-bottom:50px;
  color: #002A45;
}

.section h2 {
  font-size: 24px;
  margin-bottom: 40px;
  text-align: center;
  font-weight: 600;
  text-transform: uppercase;
}

.language ul {
    -moz-column-count: 7;
    -moz-column-gap: 20px;
    -webkit-column-count: 7;
    -webkit-column-gap: 20px;
    column-count: 7;
    column-gap: 20px;
    margin-bottom: 80px;
}

.language ul li {
  margin:10px 0;
}


.btn {
  padding: 15px 30px;
  text-decoration: none;
  border-radius: 2px;
  border: 1px solid #FA5C1F;
  margin-right: 20px;
  display: inline-block;
  font-size: 20px;
}

.btn-primary {
  background-color: #FA5C1F;
  color: #fff;
}

.btn-secondary {
  background-color: #fff;
  color: #FA5C1F;
}

#content {
    width: 600px;
    margin: 0 auto;
}

p {
    font-size: 30px;
    margin-bottom: 20px;
    text-align: left;
}

label {

}

textarea, .html {
    border: 1px solid #bbb;
    padding: 5px;
    width: 100%;
    height: 350px;
    font-size: 18px;
    font-family: Inconsolata, monaco, courier;
    margin-bottom: 20px;
}

.json {
  margin-bottom: 0;
}

.run {
    margin-bottom: 20px;
    font-size: 130%;
}

.get-started {
  background: #fafafa;
  height: 200px;
}

.get-started .inner-container {
  width: 800px;
  margin: 0 auto;
  padding: 70px;
}

.get-started h2 {
  text-transform: none;
  font-weight: 500;
  margin-top: 13px;

}

.footer {
  margin-bottom: 10px;
  padding: 0 50px;
}

.footer img {
  position: absolute;
  left: 0px;
  right: 0px;
  margin: 0px auto;
}

.footer p {
  font-size: 14px;
  margin-top: 25px;
}

.footer p a {
  color: #002A45;
}

